virtualservice.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: shared-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*.demo.mtritaba.com'
    routes:
    - matchers:
       - prefix: '/' # delegate ownership of all routes for `example.com`
      delegateAction:
        selector:
          labels:
            domain: 'demo.mtritaba.com'
          namespaces:
          - '*'
